--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <h2 class="section-title">联系我们</h2>
         <p style="text-align: center;">
             电话：+86 183 1092 6530<br>
-            邮箱：liboxi@daniellli.cc<br>
+            邮箱：liboxi@danielli.cc<br>
             地址：中国北京市朝阳区惠新东街10号
         </p>
     </section>
